# c-template-project

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/homework/: CMakeLists.txt
src/homework/homework_3/: CMakeLists.txt  errors.c
src/homework/homework_5_6_7/: malloc_fun  malloc_fun.c  pointer_shenanigans  pointer_shenanigans.c  stringconcat  stringconcat.c
src/homework/homework_5_6_7/bigboymalloc/: CMakeLists.txt
src/homework/homework_5_6_7/bigboymalloc/include/: library.h
src/homework/homework_5_6_7/bigboymalloc/src/: CMakeLists.txt  functions.c  main.c
src/homework/homework_5_6_7/bigboymalloc/tests/: CMakeLists.txt  test_malloc.c
src/homework/homework_5_6_7/structs/: CMakeLists.txt
src/homework/homework_5_6_7/structs/include/: rectangle.h
src/homework/homework_5_6_7/structs/src/: CMakeLists.txt  main  main.c  rectangle.c
src/homework/homework_5_6_7/structs/tests/: CMakeLists.txt  test_rectangle.c
src/homework/homework_8/: CMakeLists.txt  environment.yml  zipf.c
src/homework/lesson10/: CMakeLists.txt  primer  primer.c  super_assert.h  super_main.c
src/homework/lesson10/include/: welcome.h
src/homework/lesson10/src/: main.c  welcome.c
src/homework/lesson10/testing/: CMakeLists.txt  test_welcome.c
src/homework/lesson11/: err_main.c  logging.c
src/homework/lesson12/: bit_main.c  confusing_code.c
src/homework/lesson3/: errors.c
src/homework/lesson4/: CMakeLists.txt  name_length.c
src/homework/lesson4/include/: name_length.h
src/homework/lesson4/l4testing/: CMakeLists.txt  test_name_length.c
src/homework/lesson4/src/: main.c  name_length.c
src/homework/lesson4/tests/: test_name_length.c
src/homework/lesson5-6/: CMakeLists.txt  malloc_fun.c  pointer_shennanigans.c  privilege_escalation.c  string_concat.c
src/homework/lesson5-6/big_boy_malloc/: CMakeLists.txt  library2.c  library2.h  malloc_main.c
src/homework/lesson5-6/big_boy_malloc/testing/: CMakeLists.txt  test_malloc.c
src/homework/lesson7/: CMakeLists.txt  rectangle.c  rectangle.h  struct_main.c
src/homework/lesson7/testing/: CMakeLists.txt  test_rectangle.c
src/homework/lesson8/: plot.ipynb  reading_the_text.c
src/homework/my_first_c_project/: CMakeLists.txt
src/homework/my_first_c_project/src/: CMakeLists.txt  library.c  library.h  main.c
src/lessons/8-files/: 1-hello-file.c  2-fileio.c  3-fileio2.c  4-error-handling.c  5-argv.c
tests/: CMakeLists.txt
